syntax = "proto2";
package basic_study;

option go_package = "github.com/yincongcyincong/BasicStudy/proto/api";

import "github.com/yincongcyincong/BasicStudy/proto/api/basic_study.proto";


message mgetStudyTestByIDsReq {
  repeated uint64 ids = 1; // id
}

message mgetStudyTestByIDsData {
  map<uint64, studyTest> info = 1; // information
}